--- a/public/partials/tagJob.html
+++ b/public/partials/tagJob.html
@@ -1,15 +1,36 @@
 ﻿
 <section ng-controller="TagJobController">
     <div>
-        <h1>{{ jobData.job.Description }} <img src="../images/ajax-loader.gif" ng-show='ajax'></h1>
+        <h1>{{ jobData.job.Description }}</h1>
         <h6>Id: {{jobData.job.Id}}, Created {{jobData.job.CreateDate | date:'dd-MM-yyyy'}}</h6>
 
-        <div class="row">
-            <div style="width: 70%">
-                <video-tagging id='video-tagging'></video-tagging>
-            </div>
+        <p>
+           Download a video and use the <a href="https://github.com/CatalystCode/VoTT">annotation tool</a>
+            to generate a Json tags file, which you may subsequently submit.
+        </p>
+
+        <p>
+            <B><a href ng-click="download()">Download</a></B>
+        </p>
+
+        <div style="margin-top: 5em;">
+            <form id="uploadTagsForm" class="form-horizontal" role="form" ng-submit="submitTags()">
+                <div class="form-group">
+                    <label class="control-label col-sm-2" for="inputFile">TagsJson</label>
+                    <div class="col-sm-5">
+                        <input class="filestyle" id="inputFile" name="inputFile" type="file" accept=".json">
+                    </div>
+                    <div class="col-sm-3">
+                        <button type="submit" class="btn btn-clear">upload</button>
+                        <span ng-hide="!progress">{{ progress }}%</span>
+                    </div>
+                </div>
+            </form>
         </div>
 
+        <p>{{ theJsonText }}</p>
+
+        <!-- TODO: Clean this up; provide form for manual json upload -->
         <div class="buttons btn-group" role="group" style="margin-top: 2em;">
             <button ng-hide="!user" ng-click="updateJobStatus('Pending')" type="button" class="btn btn-clear">send for review</button>
             <button ng-hide="!user || user.RoleName !== 'Admin'" ng-click="updateJobStatus('Approved')" type="button" class="btn btn-clear">approve</button>
